--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "nuxt": "^2.15.8"
+    "nuxt": "^2.15.8",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
+    "@nuxt/types": "2.13.2",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/vuetify": "^1.12.1",
     "fibers": "^5.0.0",
     "sass": "^1.39.2",
     "sass-loader": "10"
